# hw_Levenberg-Marquardt

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  edge.cpp  edge.h  eigen_types.h  misc.h  optimizer_lm.cpp  optimizer_lm.h  se3_ops.h  se3_ops.hpp  se3quat.h  types.h  vertex.cpp  vertex.h
src/cmake/: Config.cmake.in
